@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-23T12:25:33Z",
+  "timestamp" : "2025-08-24T12:25:59Z",
   "count_outdated" : 5258,
   "uniques_outdated" : 2882,
-  "count" : 5293,
-  "uniques" : 2912,
+  "count" : 5294,
+  "uniques" : 2913,
   "clones" : [
     {
       "timestamp": "2025-08-10T00:00:00Z",
-      "count": 7,
+      "count": 1,
       "count_minmax": [ 1, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 5,
+      "count_decinc": [ 6, 7 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "uniques_decinc": [ 4, 5 ]
     },
     {
       "timestamp": "2025-08-11T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
