@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 18,
+  "count": 30,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2025-08-10T00:00:00Z",
-      "count": 7,
-      "uniques": 5
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-11T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2025-08-22T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
