@@ -1,3 +1,12 @@
+2025-08-24T12:25:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17188659056 # 1180
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-24
+* notice: last 14d: unq all: 15 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 2882 5258 / 2912 5293
+* notice: next accum: outdated-unq outdated-all / unq all: 2882 5258 / 2913 5294
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -4 -6 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-08-10 2025-08-24]
+
 2025-08-23T12:25:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17175422470 # 1178
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
